# India-Runs

./: .gitignore  README.md  app.py  precompute.py  pyproject.toml  rank.py  requirements.txt  requirements_cloud.txt  submission_metadata.yaml  test_pipeline.py  test_submission.csv
.streamlit/: config.toml
data/: job_description.md
models/embedding_model/: config_sentence_transformers.json
models/fusion/: calibrator.pkl  fusion_model.pkl  scaler.pkl  weights.npy
src/ranker/: __init__.py  __main__.py  candidate_loader.py  embeddings.py  fusion.py  jd_parser.py  reasoning.py  signals.py
